Pr0j3ct1le5
- Fixed Endermen getting non-magic projectile effects.
- Fixed Icicle Arrows freezing freeze-immune mobs.
- Fixed magic projectile stats/knockback issues.
- Fixed Twilight Demon attacking the player in Creative.
- Fixed harps not inflicting magic damage.
- Some Dmage Type tag tweaks.

- Now shurikens drop if they hit endermen.